--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sports">
+        android:theme="@style/Theme.Sports"
+        >
+
         <activity
             android:name=".ConfirmationPage"
             android:exported="true" />
@@ -47,5 +49,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name= "android.permission.INTERNET"/>
 </manifest>
