--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sports">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sports"
-        >
-
+        android:theme="@style/Theme.Sports">
+        <activity
+            android:name=".homepage"
+            android:exported="true" />
         <activity
             android:name=".ConfirmationPage"
             android:exported="true" />
@@ -49,5 +52,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name= "android.permission.INTERNET"/>
+
 </manifest>
